--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 // базовые подключения
 @import "vars";
 @import "mixins";
-@import "fonts";
+@import "vars";
 @import "settings";
 
 // подключения компонентов страницы
