--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -8,17 +8,24 @@ html {
   box-sizing: inherit;
 }
 
-.page {
-  height: 100%;
-  font-family: var(--font-family, sans-serif);
-  -webkit-text-size-adjust: 100%;
-}
+//.page {
+//  height: 100%;
+//  font-family: var(--font-family, sans-serif);
+//  -webkit-text-size-adjust: 100%;
+//  font-weight: 400;
+//}
 
-.page__body {
+//.page__body {
+//  margin: 0;
+//  min-width: 320px;
+//  min-height: 100%;
+//  font-size: 16px;
+//}
+
+body {
   margin: 0;
-  min-width: 320px;
-  min-height: 100%;
-  font-size: 16px;
+  font-family: var(--font-family, sans-serif);
+  font-weight: 400;
 }
 
 img {
@@ -31,9 +38,9 @@ a {
   text-decoration: none;
 }
 
-.site-container {
-  overflow: hidden; // если используете на сайте position: sticky - уберите эту настройку
-}
+//.site-container {
+//  overflow: hidden; // если используете на сайте position: sticky - уберите эту настройку
+//}
 
 .is-hidden {
   display: none !important; /* stylelint-disable-line declaration-no-important */
