--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,13 +4,9 @@
 @import "vars";
 @import "settings";
 
-// подключения компонентов страницы
+// подключения компонентов страницы (Большие компоненты)
 @import "./components/header";
 
-// тестовые стили, удалите их
-.page__body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: var(--vh);
-}
+// подключения компонентов страницы (Маленькие компоненты)
+@import "./components/nav";
+@import "./components/header-contacts";
