--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,10 @@
 
 // подключения компонентов страницы (Большие компоненты)
 @import "./components/header";
+@import "./components/hero";
+@import "./components/about-section";
 
 // подключения компонентов страницы (Маленькие компоненты)
 @import "./components/nav";
 @import "./components/header-contacts";
+@import "./components/video-block";
