--- a/src/scss/mixins/_flex.scss
+++ b/src/scss/mixins/_flex.scss
@@ -29,3 +29,8 @@
   flex-direction: column;
   align-items: flex-start;
 }
+@mixin flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
